        *  Changes and Developments in the ShinyItemAnalysis Package  *
        *                                                             *
        ***************************************************************

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.9. (2018-12-06) -
-------------------------------------------------------

MAJOR UPDATES
  o TIF were converted into plotly.
  o Section Validity/FA is not accessible for now.

MINOR UPDATES
  o Selected R code for IRT/Bock's model was updated.
  o Wording in IRT models was updated.
  o Wording in Reports was updated.
  o Legend for plots of IRT models was modified in Reports.
  o Ability estimates summary table is now round in Reports.
  o Some typos were fixed in Reports.
  o Colours of IRT summary plots correspond to model for Items.


-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.8-7. (2018-12-05) -
-------------------------------------------------------

MAJOR UPDATES
  o IRT section of shiny app was updated and now provides
    new and more shiny figures in plotly
  o PDF and HTML reports were updated and now allow
    - different types of correlation in corrplots
    - different types of discrimination indices in DDplots
    - summary table for ability estimates in IRT section

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.8-6. (2018-12-03) -
-------------------------------------------------------

BUG FIXING
  o Dendrogram is now correctly rendered.

MAJOR UPDATES
  o Function ItemAnalysis() was added.
  o IRT section now allows download of ability estimates

MINOR UPDATES
  o Help pages for functions were updated.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.8-5. (2018-11-29) -
-------------------------------------------------------

BUG FIXING
  o Key for ordinal data for binarization is now correctly used. Values