@@ -114,12 +114,10 @@ include.rownames = FALSE)
 # ** Download table with standard scores ** ####
 output$download_standard_scores <- downloadHandler(
   filename = function() {
-    paste("Standard_scores",".csv",sep = "")
+    paste("Standard_scores", ".csv", sep = "")
   },
   content = function(file) {
     data <- scores_tables_Input()
-    write.csv(data,file)
+    write.csv(data, file)
   }
 )
-
-
