@@ -583,10 +583,10 @@ IRT <- navbarMenu("IRT models",
                                                   min = 1, value = 1, max = 20,
                                                   step = 1, animate = TRUE),
                                       plotlyOutput('irt_4PL_icc_item_tab'),
-                                      downloadButton("DB_irt_4PL_icc_item_tab", label = "Download figure"),
+                                      downloadButton("DB_irt_4PL_icc_tab", label = "Download figure"),
                                       h4("Item information curves"),
                                       plotlyOutput('irt_4PL_iic_item_tab'),
-                                      downloadButton("DB_irt_4PL_iic_item_tab", label = "Download figure"),
+                                      downloadButton("DB_irt_4PL_iic_tab", label = "Download figure"),
                                       h4("Table of estimated parameters"),
                                       p('Estimates of parameters are completed by SX2 item fit statistics (Orlando and Thissen, 2000; see also Ames & Penfield, 2015).
                                         SX2 statistics are computed only when no missing data are present.'),
